force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/SVMXA360__CONF_EntitlementRule__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration rules to perform automatic entitlement check functionality.</description>
    <label>Entitlement Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>