force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__AssetAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetAPIName__c</fullName>
    <description>Asset field on source object to be considered while performing entitlement check.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>