force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__CheckContracts__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CheckContracts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to consider Contracts when performing entitlement check (True) or not (False).</description>
    <label>Check Contracts</label>
    <type>Checkbox</type>
</CustomField>