force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__CheckWarranties__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CheckWarranties__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to consider Asset Warranties when performing entitlement check (True) or not (False).</description>
    <label>Check Warranties</label>
    <type>Checkbox</type>
</CustomField>