force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__CoveredBy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CoveredBy__c</fullName>
    <description>Describes whether the entitlement check should be performed based on Asset or Account.</description>
    <label>Covered By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
                <default>true</default>
                <label>Asset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>