force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__DefaultBillingType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DefaultBillingType__c</fullName>
    <description>The default billing type to be selected when performing auto entitlement.</description>
    <label>Default Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__BillingType</valueSetName>
    </valueSet>
</CustomField>