force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__Expression__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Expression__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Expression using which the entitlement rule will be qualified.</description>
    <label>Expression</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Entitlement Rules</relationshipLabel>
    <relationshipName>EntitlementRules</relationshipName>
    <type>Lookup</type>
</CustomField>