force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__IncludeParentAsset__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IncludeParentAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to include parent Assets when performing an entitlement check (True) or not (False).</description>
    <label>Include Parent Asset</label>
    <type>Checkbox</type>
</CustomField>