force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__IncludeRootAsset__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IncludeRootAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to include root Asset when performing entitlement check (True) or not (False).</description>
    <label>Include Root Asset</label>
    <type>Checkbox</type>
</CustomField>