force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__IsActive__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the entitlement rule is active (True) or not (False).</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>