force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__MatchAccount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MatchAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to consider source object Account when performing an entitlement check (True) or not (False).</description>
    <label>Match Account</label>
    <type>Checkbox</type>
</CustomField>