force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__MatchContact__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MatchContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to consider source object Contact when performing entitlement check (True) or not (False).</description>
    <label>Match Contact</label>
    <type>Checkbox</type>
</CustomField>