force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__ResolutionMethod__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ResolutionMethod__c</fullName>
    <description>Describes an action when the entitlement check identifies multiple coverages.</description>
    <label>Resolution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USE-WARRANTY</fullName>
                <label>Select Warranty</label>
            </value>
            <value>
                <fullName>USE-CONTRACT</fullName>
                <default>true</default>
                <label>Select Service Contract</label>
            </value>
            <value>
                <fullName>MULTIPLE-FOUND</fullName>
                <label>Prompt user to select</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>