force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Sequence__c</fullName>
    <description>The sequence in which the qualified entitlement rule should be considered when performing the entitlement check.</description>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>