force-app/main/default/objects/SVMXA360__CONF_EntitlementRule__c/fields/SVMXA360__WarrantyTypes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WarrantyTypes__c</fullName>
    <description>One or more Warranty types to be excluded when performing entitlement check.</description>
    <label>Warranty Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>